force-app/main/default/objects/Subscribed_Offices__c/Subscribed_Offices__c.object-meta.xml
<CustomObject>
    <label>Subscribed Offices</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscribed Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscribed Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>