force-app/main/default/objects/Subscribed_Offices__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country that this subscribed office is supporting.</description>
    <inlineHelpText>You can have more than one subscribed office entry for a country. You can also have more than one subscribed office for a firm when they support more than one country.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>