force-app/main/default/objects/Subscribed_Offices__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Subscribed Office</relationshipLabel>
    <relationshipName>Subscribed_Office</relationshipName>
    <type>Lookup</type>
</CustomField>