force-app/main/default/objects/Subscribed_Offices__c/fields/Subscribed_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscribed Office Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscribed Office</relationshipLabel>
    <relationshipName>Subscribed_Office</relationshipName>
    <type>Lookup</type>
</CustomField>